fix: 创建应用接口
