# api/v1/manager.pb.validate.go
@@ -1,0 +1,386 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: v1/manager.proto
+
+package v1
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on ManagerCreateRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *ManagerCreateRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ManagerCreateRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ManagerCreateRequestMultiError, or nil if none found.
+func (m *ManagerCreateRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ManagerCreateRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if !_ManagerCreateRequest_Ident_Pattern.MatchString(m.GetIdent()) {
+		err := ManagerCreateRequestValidationError{
+			field:  "Ident",
+			reason: "value does not match regex pattern \"^[a-z][a-z0-9.]{5,50}$\"",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if l := utf8.RuneCountInString(m.GetName()); l < 2 || l > 30 {
+		err := ManagerCreateRequestValidationError{
+			field:  "Name",
+			reason: "value length must be between 2 and 30 runes, inclusive",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if _, ok := ManagerStatus_name[int32(m.GetStatus())]; !ok {
+		err := ManagerCreateRequestValidationError{
+			field:  "Status",
+			reason: "value must be one of the defined enum values",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if m.GetExpiredAt() == nil {
+		err := ManagerCreateRequestValidationError{
+			field:  "ExpiredAt",
+			reason: "value is required",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if t := m.GetExpiredAt(); t != nil {
+		ts, err := t.AsTime(), t.CheckValid()
+		if err != nil {
+			err = ManagerCreateRequestValidationError{
+				field:  "ExpiredAt",
+				reason: "value is not a valid timestamp",
+				cause:  err,
+			}
+			if !all {
+				return err
+			}
+			errors = append(errors, err)
+		} else {
+
+			now := time.Now()
+
+			if ts.Sub(now) <= 0 {
+				err := ManagerCreateRequestValidationError{
+					field:  "ExpiredAt",
+					reason: "value must be greater than now",
+				}
+				if !all {
+					return err
+				}
+				errors = append(errors, err)
+			}
+
+		}
+	}
+
+	if len(errors) > 0 {
+		return ManagerCreateRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// ManagerCreateRequestMultiError is an error wrapping multiple validation
+// errors returned by ManagerCreateRequest.ValidateAll() if the designated
+// constraints aren't met.
+type ManagerCreateRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ManagerCreateRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ManagerCreateRequestMultiError) AllErrors() []error { return m }
+
+// ManagerCreateRequestValidationError is the validation error returned by
+// ManagerCreateRequest.Validate if the designated constraints aren't met.
+type ManagerCreateRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ManagerCreateRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ManagerCreateRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ManagerCreateRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ManagerCreateRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ManagerCreateRequestValidationError) ErrorName() string {
+	return "ManagerCreateRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ManagerCreateRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sManagerCreateRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ManagerCreateRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ManagerCreateRequestValidationError{}
+
+var _ManagerCreateRequest_Ident_Pattern = regexp.MustCompile("^[a-z][a-z0-9.]{5,50}$")
+
+// Validate checks the field values on ManagerCreateResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *ManagerCreateResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ManagerCreateResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ManagerCreateResponseMultiError, or nil if none found.
+func (m *ManagerCreateResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ManagerCreateResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Id
+
+	// no validation rules for Ident
+
+	// no validation rules for Name
+
+	// no validation rules for Key
+
+	// no validation rules for Secret
+
+	// no validation rules for Status
+
+	if all {
+		switch v := interface{}(m.GetExpiredAt()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, ManagerCreateResponseValidationError{
+					field:  "ExpiredAt",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, ManagerCreateResponseValidationError{
+					field:  "ExpiredAt",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetExpiredAt()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return ManagerCreateResponseValidationError{
+				field:  "ExpiredAt",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if all {
+		switch v := interface{}(m.GetCreatedAt()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, ManagerCreateResponseValidationError{
+					field:  "CreatedAt",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, ManagerCreateResponseValidationError{
+					field:  "CreatedAt",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetCreatedAt()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return ManagerCreateResponseValidationError{
+				field:  "CreatedAt",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if len(errors) > 0 {
+		return ManagerCreateResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// ManagerCreateResponseMultiError is an error wrapping multiple validation
+// errors returned by ManagerCreateResponse.ValidateAll() if the designated
+// constraints aren't met.
+type ManagerCreateResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ManagerCreateResponseMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ManagerCreateResponseMultiError) AllErrors() []error { return m }
+
+// ManagerCreateResponseValidationError is the validation error returned by
+// ManagerCreateResponse.Validate if the designated constraints aren't met.
+type ManagerCreateResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ManagerCreateResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ManagerCreateResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ManagerCreateResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ManagerCreateResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ManagerCreateResponseValidationError) ErrorName() string {
+	return "ManagerCreateResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ManagerCreateResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sManagerCreateResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ManagerCreateResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ManagerCreateResponseValidationError{}
