# internal/repositories/dbrepo/model/model.go
@@ -7,7 +7,7 @@ import (
 
 type BaseModel struct {
 	ID        int            `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"` // 主键ID
-	CreatedAt time.Time      `gorm:"column:created_at" json:"created_at"`               // 创建时间
-	UpdatedAt time.Time      `gorm:"column:updated_at;default:now()" json:"updated_at"` // 更新时间
-	DeletedAt gorm.DeletedAt `gorm:"column:deleted_at" json:"deleted_at"`               // 删除时间
+	CreatedAt time.Time      `gorm:"column:created_at;comment:创建时间" json:"created_at"`  // 创建时间
+	UpdatedAt time.Time      `gorm:"column:updated_at;comment:更新时间" json:"updated_at"`  // 更新时间
+	DeletedAt gorm.DeletedAt `gorm:"column:deleted_at;comment:删除时间" json:"deleted_at"`  // 删除时间
 }
